[gd_scene load_steps=11 format=3 uid="uid://drnny7piu6sab"]

[ext_resource type="Texture2D" uid="uid://cicf7e5ph225v" path="res://Assests/IMG_20240612_163431343.jpg" id="1_0fmu7"]
[ext_resource type="Script" path="res://Scripts/DockScene.gd" id="1_hef3q"]
[ext_resource type="Texture2D" uid="uid://be14q7d8uyds5" path="res://Assests/slice1.png" id="2_nifbr"]
[ext_resource type="Texture2D" uid="uid://bf5pdqcyvu0qe" path="res://Assests/SelectSlice.png" id="3_urv2y"]
[ext_resource type="BitMap" uid="uid://bf7e8iioyn8j7" path="res://Assests/bitmapTest.png" id="4_hfyuy"]
[ext_resource type="Script" path="res://Scripts/TestFishingMenu.gd" id="5_m350i"]
[ext_resource type="Texture2D" uid="uid://b180g77soao58" path="res://Assests/fishingHook.png" id="6_y1201"]
[ext_resource type="Texture2D" uid="uid://7eegp823xw4g" path="res://Assests/fishingHookSelected.png" id="7_foo85"]
[ext_resource type="BitMap" uid="uid://c2mifbhrkqrhn" path="res://Assests/fishingHookSelectedBitmap.png" id="7_phj3t"]
[ext_resource type="PackedScene" uid="uid://dh6j3ea3ce5jh" path="res://Scenes/UI/rod_equip_slot.tscn" id="10_lmspx"]

[node name="DockScene" type="Node2D"]
script = ExtResource("1_hef3q")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(578, 290)
scale = Vector2(0.287333, 0.258667)
texture = ExtResource("1_0fmu7")
metadata/_edit_lock_ = true

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 661.0
offset_top = 385.0
offset_right = 1196.0
offset_bottom = 1317.0
scale = Vector2(0.285869, 0.285869)
texture_normal = ExtResource("2_nifbr")
texture_hover = ExtResource("3_urv2y")
texture_click_mask = ExtResource("4_hfyuy")
metadata/_edit_use_anchors_ = true

[node name="fishingGameButton" type="TextureButton" parent="."]
offset_left = 523.0
offset_top = 136.0
offset_right = 879.0
offset_bottom = 1222.0
scale = Vector2(0.276859, 0.260794)
texture_normal = ExtResource("6_y1201")
texture_hover = ExtResource("7_foo85")
texture_click_mask = ExtResource("7_phj3t")
metadata/_edit_use_anchors_ = true

[node name="Fishing rod menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 229.0
offset_top = 102.0
offset_right = 920.0
offset_bottom = 551.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_m350i")

[node name="outOfBounds" type="TextureButton" parent="Fishing rod menu"]
layout_mode = 0
offset_left = -250.0
offset_top = -88.0
offset_right = 900.0
offset_bottom = 588.0

[node name="Panel" type="Panel" parent="Fishing rod menu"]
layout_mode = 0
offset_left = -20.0
offset_right = 711.0
offset_bottom = 449.0
tooltip_text = "
"

[node name="ScrollContainer" type="ScrollContainer" parent="Fishing rod menu"]
layout_mode = 0
offset_left = 14.0
offset_top = 38.0
offset_right = 692.0
offset_bottom = 417.0

[node name="VBoxContainer" type="HBoxContainer" parent="Fishing rod menu/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 180

[node name="rodEquipSlot" parent="Fishing rod menu/ScrollContainer/VBoxContainer" instance=ExtResource("10_lmspx")]
layout_mode = 2

[node name="rodEquipSlot2" parent="Fishing rod menu/ScrollContainer/VBoxContainer" instance=ExtResource("10_lmspx")]
layout_mode = 2

[node name="rodEquipSlot3" parent="Fishing rod menu/ScrollContainer/VBoxContainer" instance=ExtResource("10_lmspx")]
layout_mode = 2

[node name="rodTPButton" type="Button" parent="."]
offset_left = 22.0
offset_top = 519.0
offset_right = 243.0
offset_bottom = 590.0
text = "To buy rod :3"

[node name="shopTPButton" type="Button" parent="."]
offset_left = 22.0
offset_top = 419.0
offset_right = 243.0
offset_bottom = 490.0
text = "To sell"

[connection signal="pressed" from="TextureButton" to="Fishing rod menu" method="_on_texture_button_pressed"]
[connection signal="pressed" from="fishingGameButton" to="." method="_on_fishing_game_button_pressed"]
[connection signal="pressed" from="Fishing rod menu/outOfBounds" to="Fishing rod menu" method="_on_out_of_bounds_pressed"]
[connection signal="pressed" from="rodTPButton" to="." method="_on_rod_tp_button_pressed"]
[connection signal="pressed" from="shopTPButton" to="." method="_on_shop_tp_button_pressed"]
